--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -10,3 +10,7 @@
   font-family: mont-semiBold;
   src: url('/assets/fonts/Mont-SemiBold.otf')
 }
+@font-face{
+  font-family: mont-book;
+  src: url('/assets/fonts/Mont-Book.otf');
+}
