--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,92 +8,30 @@
 @import './components/headers.css';
 
 /* About us */
-.about-us{
-    padding-top: 63px;
-    padding-bottom: 35px;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-}
-.about-us > .title{
-    font-family: 'mont-semiBold';
-    font-size: 42px;
-    line-height: 55px;
-    color: var(--primary);
-    grid-column: 1/5;
-}
-.about-us > .title > span{
-    color: var(--secondary);
-    font-family: 'mont-bold';
-    position: relative;
-}
-.about-us > .title > span:after{
-    content: url('../img/magic-underline.svg');
-    position: absolute;
-    bottom: -21px;
-    left: -21px;
-}
-.about-us > .title > img{
-    transform: rotate(-5deg) translateY(20px); 
-}
-.about-us > .desc{
-    margin-top: 25px;
-    max-width: 731px;
-    font-size: 18px;
-    line-height: 28px;
-    font-family: 'mont-regular';
-    color: var(--dark-grey);
-    grid-row: 2;
-    grid-column: 1/4;
-}
-.about-us > .img{
-    margin-top: 45px;
-    grid-row: 2/4;
-    grid-column: 4/5;
-}
-
-.about-us > .services{
-    margin-top: 26px;
-    padding: 17px 15px 3px;
-    background: #aeccff1a;
-    border: 1px solid #aeccff80;
-    border-radius: 10px;
-    grid-row: 3;
-    grid-column: 1;
-}
-.about-us > .services > .service{
-    text-align: center;
-    display: inline-block;
-    position: relative;
-}
-.about-us > .services > .service:not(:first-child){
-    margin-left: 30px;
-}
-.about-us > .services > .service:not(:first-child):before{
-    content: "";
-    height: 117px;
-    width: 1px;
-    background: #CEE2FF;
-    display: inline-block;
-    position: absolute;
-    left: -15px;
-}
-.about-us > .services > .service > .title{
-    font-size: 14px;
-    line-height: 20px;
-    color: var(--primary);
-    font-family: 'mont-bold';
-}
-.about-us > .services > .service > p{
-    font-size: 12px;
-    line-height: 20px;
-    color: var(--dark-grey);
-    font-family: 'mont-regular';
-}
-.about-us > .services > .service img{
-    margin-bottom: 15px;
-}
+@import './components/about-us.css';
 
 /* Responsives */
+@media (max-width:1320px){
+    /* About us */
+    .about-us > .title{
+        grid-column: 1/4;
+    }
+    .about-us > .img{
+        grid-row: 1/3;
+        margin-top: unset;
+    }
+    .about-us > .img > img{
+        float: right;
+        width: 350px;
+    }
+    .services-wrapper{
+        grid-column: 1/5;
+    }
+    .about-us > .title > span:before{
+        transform: rotate(224deg) scaleX(-1);
+    }
+}
+
 @media (max-width:1200px){
     /* Global classes */
     .main-padding{
@@ -111,7 +49,7 @@
     }
 }
 
-@media (max-width:912px){
+@media (max-width:992px){
     /* Global classes */
     .main-padding{
         padding-left: 17px;
@@ -121,7 +59,106 @@
     .header{
         justify-content: center;
     }
-    .links, .order-now-btn{
+    .links, .btn-order-now{
         display: none;
+    }
+    /* About us */
+    .about-us{
+        background-color: #f5fdff;
+        padding-top: 20px;
+        padding-bottom: 25px;
+    }
+    .about-us > .title{
+        font-size: 38px;
+    }
+    .about-us > .title > span:before{
+        right: -94px;
+        top: 16px;
+    }
+    .about-us > .desc{
+        grid-column: 1/5;
+        text-align: center;
+        margin-top: 45px;
+    }
+    .services-wrapper{
+        display: flex;
+        justify-content: center;
+    }
+    .about-us > .img > img{
+        float: right;
+        width: 270px;
+    }
+    .services{
+        background: unset;
+        border: unset;
+        margin-top: unset;
+        width:100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .service:not(:first-child):before, .service > p:not(.title){
+        display: none;
+    }
+    .btn-group{
+        grid-column: 1/5;
+        margin-top: 10px;
+    }
+    .btn-get-now{
+        margin: 18px auto 18px;
+    }
+    .testimonial-wrapper{
+        grid-row: 5;
+        grid-column: 1/5;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 673px){
+    /* About us */
+    .about-us > .title{
+        font-size: 26px;
+        line-height: 30px;
+        grid-column: 1/3;
+    }
+    .about-us > .img > img {
+        width: 179px;
+    }
+    .about-us > .title > span:before{
+        top: 3px;
+        transform: rotate(199deg) scaleX(-1);
+    } 
+    .about-us > .title > span:after {
+        transform: scaleX(0.56);
+        bottom: -18px;
+        left: -42px;
+    }
+    .about-us > .desc{
+        font-size: 14px;
+        line-height: 22px;
+    }
+    .about-us > .desc  span{
+        display: none;
+    }
+    .service > .title{
+        font-size: 12px;
+    }
+    .service:not(:first-child){
+        margin-left: 10px;
+    }
+    .btn-get-now{
+        margin-top: 0;
+        font-size: 16px;
+        width: 377px;
+    }
+    .btn-bundle{
+        font-size: 13px;
+        line-height: 14px;
+        width: 228px;
+    }
+    .testimonial-wrapper { 
+        width: 377px;        
+    }
+    .testimonial > .text{
+        padding-right: 68px;
     }
 }
