--- a/assets/css/components/about-us.css
+++ b/assets/css/components/about-us.css
@@ -91,7 +91,7 @@
     margin-bottom: 15px;
 }
 .btn-group{
-    margin-top: 52px;
+    margin-top: 42px;
     grid-row: 4/4;
     grid-column: 1/1;
 }
@@ -147,7 +147,7 @@
     font-size: 12px;
     line-height: 17px;
     color: var(--black);
-    font-family: 'mont-book';
+    font-family: 'mont-semiBold';
     padding-top: 5px;
     padding-right:  80px;
 }
