--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,390 +17,10 @@
 @import './components/shop.css';
 
 /* Testimonials */
-.testimonials{
-    background-color: #F6F8FC;
-    padding-top: 48px;
-    padding-bottom: 62px;
-}
-.testimonials > .title{
-    font-size: 37px;
-    line-height: 49px;
-    color: var(--primary);
-    font-family: 'mont-semiBold';
-    text-align: center;
-    margin-bottom: 55px;
-}
-.testimonials > .title > span{
-    color: var(--secondary);
-    font-family: 'mont-bold';
-    position: relative;
-}
-.testimonials > .title > span::after{
-    content: url('../img/are-saying-underline.svg');
-    position: absolute;
-    left: -10px;
-    bottom: -20px;    
-}
-.testimonials > .top-part{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 23px;
-}
-.testimonials > .top-part > .write-a-review{
-    font-family: mont-light;
-    font-size: 14px;
-    line-height: 17px;
-    border: 1px solid #213786;
-    border-radius: 5px;
-    color: #213786;
-    padding: 7px 0;
-    text-align: center;
-    width: 133px;
-}
-.testimonials > .top-part > .reviews{
-    font-size: 14px;
-    line-height: 19px;
-    font-family: 'mont-bold';
-    color: var(--primary);
-    display: flex;
-    align-items: center;
-    gap: 7px;
-}
-.testimonials-wrapper{
-    display: flex;
-    justify-content: space-between;
-    overflow: visible;
-}
-.testimonials-container{
-    width: 100%;
-    display: flex;
-    overflow: scroll;
-    scroll-behavior: smooth;
-    -ms-overflow-style: none;
-    scrollbar-width: none; 
-}
-.testimonials-container::-webkit-scrollbar{
-    display: none;
-}
+@import './components/testimonials.css';
 
-.single-testimonial {
-    background: var(--white);
-    border: 1px solid #E9E9E9;
-    border-radius: 10px;
-    display: inline-block;
-    width: 285px;
-}
-.single-testimonial:not(:last-child){
-    margin-right: 30px;
-}
-.info{
-    padding: 0 13px 13px 13px;
-}
-.single-testimonial > .img > img {    
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-}
-.single-testimonial > .info > .name {
-    display: flex;
-    justify-content: start;
-}
-.single-testimonial > .info > .name > span{
-    font-size: 14px;
-    line-height: 19px;
-    color: var(--primary); 
-    font-family: 'mont-bold';
-    margin-right: 46px;
-    margin-bottom: 6px;
-}
-.single-testimonial > .info > .name > .verified{
-    display: flex;
-    align-items: center;
-}
-.single-testimonial > .info > .name > .verified > img{
-    height: 17.5px;
-    margin-right: 9px;
-}
-.single-testimonial > .info > .name > .verified > span{
-    font-size: 11px;
-    line-height: 15px;
-    text-align: center;
-    color: #89C25F;
-    font-family: 'mont-bold';
-}
-.single-testimonial > .info > .text{
-    font-size: 13px;
-    line-height: 26px;
-    color: var(--dark-grey);
-    font-family: 'mont-regular';
-}.pagination-wrapper{
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-.pagination{
-    height:14px;
-    width: 14px;
-    border-radius: 7px;
-    background-color: #CBCED6;
-    margin-right: 10px;
-    cursor: pointer;
-}
-.pagination.active{
-    background-color: var(--secondary);
-}
+/* FAQ */
+@import './components/faq.css';
 
 /* Responsives */
-@media (max-width:1320px){
-    /* About us */
-    .about-us > .title{
-        grid-column: 1/4;
-    }
-    .about-us > .img{
-        grid-row: 1/3;
-        margin-top: unset;
-    }
-    .about-us > .img > img{
-        float: right;
-        width: 350px;
-    }
-    .services-wrapper{
-        grid-column: 1/5;
-    }
-    .about-us > .title > span:before{
-        transform: rotate(224deg) scaleX(-1);
-    }
-    /* Divider */
-    .divider{
-        font-size: 14px;
-        padding: 15px 30px;
-        line-height: 24px;
-    }
-    /* Shop */
-    .cards-wrapper{
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
-    .card:last-child{
-        margin-top: 35px;
-    }
-}
-
-@media (max-width:1200px){
-    /* Global classes */
-    .main-padding{
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-    /* Header */
-    .header{
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
-    .links li {
-        display: inline-block;
-        margin-right: 25px;
-    }
-    /* Divider */
-    .offer{
-        flex-direction: column;
-        text-align: center;
-    }
-    .divider > .offer > .img{
-        width: 36px;
-        height: 36px;
-        margin-bottom: 5px;        
-    }
-    .divider > .offer > .img > img{
-        transform: scale(0.7);
-    }
-}
-
-@media (max-width:992px){
-    /* Global classes */
-    .main-padding{
-        padding-left: 17px;
-        padding-right: 17px;
-    }
-    /* Header */
-    .header{
-        justify-content: center;
-    }
-    .links, .btn-order-now{
-        display: none;
-    }
-    /* About us */
-    .about-us{
-        background-color: #f5fdff;
-        padding-top: 20px;
-        padding-bottom: 25px;
-    }
-    .about-us > .title{
-        font-size: 38px;
-    }
-    .about-us > .title > span:before{
-        right: -94px;
-        top: 16px;
-    }
-    .about-us > .desc{
-        grid-column: 1/5;
-        text-align: center;
-        margin-top: 45px;
-    }
-    .services-wrapper{
-        display: flex;
-        justify-content: center;
-    }
-    .about-us > .img > img{
-        float: right;
-        width: 270px;
-    }
-    .services{
-        background: unset;
-        border: unset;
-        margin-top: unset;
-        width:100%;
-        display: flex;
-        justify-content: space-between;
-    }
-    .service:not(:first-child):before, .service > p:not(.title){
-        display: none;
-    }
-    .btn-group{
-        grid-column: 1/5;
-        margin-top: 10px;
-    }
-    .btn-get-now{
-        margin: 18px auto 18px;
-    }
-    .testimonial-wrapper{
-        grid-row: 5;
-        grid-column: 1/5;
-        margin: 0 auto;
-    }
-    /* Shop */
-    .shop > .title{
-        font-size: 30px;
-        line-height: 39px;
-    }
-    .cards-wrapper{
-        flex-direction: column-reverse;
-        align-items: center;
-    }
-    .card{
-        margin-bottom: 73px;
-    }
-    .card:first-child .guarantee-money-back{
-        display: none;
-    }
-    .card:first-child .img{
-        margin-top: 20px;
-    }
-    .card:first-child .btn-primary{
-        margin-top: unset;
-    }
-    .card:last-child{
-        margin-top: unset;
-    }
-    .card > .title{
-        font-size: 24px;
-        line-height: 29px;
-        font-family: 'mont-regular';
-    }
-    .card > .prices{
-        font-size: 25px;
-        line-height: 31px;
-    }
-    .card > .prices > .new-price{
-        font-family: 'mont-bold';
-    }
-    .card > .prices > .new-price >  span{
-        display: none;
-    }
-    .card > .prices > .old-price{
-        font-family: 'regular';
-    }
-    /* Testimonials  */
-    .testimonials > .title > span{
-        display: block;
-    }
-    .testimonials > .title > span::after{
-        left: 50%;
-        transform: translateX(-50%);
-            
-    }
-    .testimonials > .top-part > .reviews{
-        align-items: flex-start;
-        gap: 7px;
-        flex-direction: column;
-    }
-    .testimonials > .top-part > .write-a-review > p{
-        color: var(--primary);
-        padding-top : 4px;
-    }
-}
-
-@media (max-width: 673px){
-    /* About us */
-    .about-us > .title{
-        font-size: 26px;
-        line-height: 30px;
-        grid-column: 1/3;
-    }
-    .about-us > .img > img {
-        width: 179px;
-    }
-    .about-us > .title > span:before{
-        top: 3px;
-        transform: rotate(199deg) scaleX(-1);
-    } 
-    .about-us > .title > span:after {
-        transform: scaleX(0.56);
-        bottom: -18px;
-        left: -42px;
-    }
-    .about-us > .desc{
-        font-size: 14px;
-        line-height: 22px;
-    }
-    .about-us > .desc  span{
-        display: none;
-    }
-    .service > .title{
-        font-size: 12px;
-    }
-    .service:not(:first-child){
-        margin-left: 10px;
-    }
-    .btn-get-now{
-        margin-top: 0;
-        font-size: 16px;
-        width: 377px;
-    }
-    .btn-bundle{
-        font-size: 13px;
-        line-height: 14px;
-        width: 228px;
-    }
-    .testimonial-wrapper { 
-        width: 377px;        
-    }
-    .testimonial > .text{
-        padding-right: 68px;
-    }
-    /* Divider */
-    .divider{
-        padding: 11px 0;
-        justify-content: space-around;
-        font-size: 12px;
-        line-height: 18px;
-    }
-    .offer .hide{
-        display: none;        
-    }
-    .offer .show{
-        display: inline-block;
-    }
-    .offer:last-child{
-        display: none;
-    }
-}
+@import './responsive.css';
